<resources>
    <string name="app_name">AviaLine</string>
    <string name="Authorization">Авторизация</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Логин</string>
    <string name="profilename">Имя профиля</string>
    <string name="userName">Имя пользователя</string>
    <string name="applyChange">Применить</string>
    <string name="Email">E-mail</string>
    <string name="Profile">Профиль</string>
    <string name="Confirm_password">Повторить пароль</string>
    <string name="Registration">Регистрация</string>
    <string name="Password">Пароль</string>
    <string name="Name_user">Имя пользователя</string>
    <string name="Review">Отзыв:</string>
    <string name="star10">|10</string>
    <string name="x">X</string>
    <string name="reviews">Мнение клиентов</string>
    <string name="company_name">Company name</string>
    <string name="company">Компании</string>
    <string name="Search">Поиск</string>
    <string name="routs">Пути перелёта</string>
    <string name="vip_place">VIP места:</string>
    <string name="_10">10</string>
    <string name="_59430">59430р</string>
    <string name="_40">40</string>
    <string name="vip_price">VIP цена:</string>
    <string name="_19430">19430р</string>
    <string name="countPlace">Кол-во мест:</string>
    <string name="PriceTicket">Цена билета:</string>
    <string name="road"><![CDATA[Москва -> Питер]]></string>
    <string name="error">ОШИБКА =(</string>
    <string name="refresh">Перезагрузить</string>
</resources>