<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/black"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/Road"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:lines="1"
            android:text="@string/road"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text="@string/PriceTicket"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Road" />
        <TextView
            android:id="@+id/PriceCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text="@string/_19430"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/Price"
            app:layout_constraintTop_toBottomOf="@+id/Road" />
        <TextView
            android:id="@+id/Place"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:lines="1"
            android:text="@string/countPlace"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Price" />

        <TextView
            android:id="@+id/PlaceVIP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:lines="1"
            android:text="@string/vip_place"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/VipPrice"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/placeCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text="@string/_40"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/Price"
            app:layout_constraintTop_toBottomOf="@+id/Price" />
        <TextView
            android:id="@+id/placeCountVIP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text="@string/_10"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/PlaceVIP"
            app:layout_constraintTop_toBottomOf="@id/PriceCountVIP" />
        <TextView
            android:id="@+id/VipPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vip_price"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/Place"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/PriceCountVIP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text="@string/_59430"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/VipPrice"
            app:layout_constraintTop_toBottomOf="@+id/Place" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>