<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/airplane">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:textSize="80sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editTextNameUser"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="50dp"
        android:hint="@string/Name_user"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="25dp"
        android:hint="@string/Email"
        android:background="@color/blue"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="25dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textAlignment="textStart"
        android:background="@color/blue"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/editTextTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="25dp"
        android:hint="@string/Confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="15dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:background="@color/blue"
        android:textSize="20sp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/Register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="85sp"
        android:layout_marginTop="35sp"
        android:background="@color/black"
        android:text="@string/Registration"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</LinearLayout>