<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/airplane"
    android:paddingHorizontal="15dp">


    <EditText
        android:id="@+id/User_secondname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:inputType="textPersonName"
        android:background="@color/blue"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_name" />

    <EditText
        android:id="@+id/User_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:background="@color/blue"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="20sp"
        android:hint="@string/Email"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_secondname" />

    <ImageView
        android:id="@+id/imageProfile"
        android:background="@color/blue"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Profile"/>

    <ImageButton
        android:id="@+id/icClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="?selectableItemBackground"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Profile"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/User_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="15dp"
        android:inputType="textPersonName"
        android:background="@color/blue"
        android:padding="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:hint="@string/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameProfile" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:textColor="@color/white"
        android:text="@string/applyChange"
        android:textSize="16sp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User_email"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/NameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profilename"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageProfile"/>
</androidx.constraintlayout.widget.ConstraintLayout>
